# blahaj

harmonia/: .pre-commit-config.yaml  pyproject.toml
harmonia/bot/: harmonia_bot.py  harmonia_core.py
harmonia/bot/cogs/: sync.py
python/: main.py
